--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,41 @@ body {
     margin: 0;
 }
 
+input[type=range] {
+    -webkit-appearance: none;
 
+  }
+  input[type=range]:focus {
+    outline: none;
+  }
+  input[type=range]::-webkit-slider-runnable-track {
+    box-shadow: 1px 1px 1px #D997FF, 0px 0px 1px #D997FF;
+    height: 7px;
+    cursor: pointer;
+    background: #CC99FF;
+    border: 0px;
+    
+  }
+
+  input[type=range]::-webkit-slider-thumb {
+    box-shadow: 1px 1px 1px #D997FF, 0px 0px 1px #D997FF;
+    border: 1px solid #D997FF;
+    height: 14px;
+    width: 14px;
+    border-radius: 365px;
+    background-color: #ffffff;
+
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -5px;
+  }
+
+  input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #FA85EF;
+  }
+
+
+
+
+
+  
